option('docs',
       type: 'boolean', value: false,
       description: 'Enable generating the Epoxy API reference (depends on Doxygen)')
option('glx',
       type: 'combo',
       choices: [ 'auto', 'yes', 'no' ],
       value: 'auto',
       description: 'Enable GLX support')
option('egl',
       type: 'combo',
       choices: [ 'auto', 'yes', 'no' ],
       value: 'auto',
       description: 'Enable EGL support')
option('x11',
       type: 'boolean',
       value: true,
       description: 'Enable X11 support (GLX or EGL-X11)')
option('tests',
       type: 'boolean',
       value: true,
       description: 'Build the test suite')
